# dnspesctor

./: .gitignore  Cargo.toml  README.md  install.sh  run-tunnel-test.sh  rust-dns.rs
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: build-release.sh  install.sh  iptables-server.sh
